--- a/App_Web/src/main/resources/templates/request/requests.html
+++ b/App_Web/src/main/resources/templates/request/requests.html
@@ -21,9 +21,8 @@
             <tr class="table-header">
                 <th></th>
                 <th></th>
-                <th></th>
                 <th>Users</th>
-                <th>Courses</th>
+                <th>Course</th>
                 <th>Status</th>
                 <th>Actions</th>
             </tr>
@@ -38,7 +37,6 @@
                         <i class="fa-solid fa-file-pen" title="Edit"></i>
                     </a>
                 </td>
-                <td></td>
                 <td>
                     <a th:href="@{/users/__${request.user.id}__}"
                        th:text="${request.user.firstName} + ' ' + ${request.user.lastName}">User</a>
