LMS-41: Added download method controller and refactoring

--- a/App_Web/src/main/resources/templates/fileService.html
+++ b/App_Web/src/main/resources/templates/fileService.html
@@ -13,6 +13,7 @@
     <input type="file" name="file_upload"/>
     <input type="submit" value="Upload">
 </form>
-<p><a href="/files/Server.txt" download>Download file</a>
+
+<p><a title="Push me" href="/file/{fileLinkDto}" download>Download file</a></p>
 </body>
 </html>
