LMS-61: Redirect to an existing page after cancel request

--- a/App_Web/src/main/resources/templates/request/requests.html
+++ b/App_Web/src/main/resources/templates/request/requests.html
@@ -50,6 +50,7 @@
                         <input type="hidden" name="user.id" th:value="${request.user.id}">
                         <input type="hidden" name="course.id" th:value="${request.course.id}">
                         <input type="hidden" name="status" th:value="CANCELLED">
+                        <input type="hidden" name="uri" th:value=@{/requests}>
                         <input type="submit" value="Deactivate" class="button-active"/>
                     </td>
                 </form>
