--- a/App_Web/src/main/resources/templates/course/course.html
+++ b/App_Web/src/main/resources/templates/course/course.html
@@ -16,8 +16,6 @@
         <h2 class="subheader">Information<br> about the course</h2>
         <a sec:authorize="hasAuthority('MANAGER')" th:href="'/courses/updateForm/' + ${course.id}"
            class="button-active">Edit course</a>
-        <a sec:authorize="hasAuthority('MANAGER')" th:href="'/lessons/createForm'"
-           class="button-active">Add lesson</a>
         <h1 class="text" sec:authorize="hasAuthority('STUDENT')">Enroll in a course</h1>
         <form action="/requests/create" method="post" sec:authorize="hasAuthority('STUDENT')">
             <input type="hidden" name="user.email" th:value="${#authentication.name}">
@@ -46,13 +44,12 @@
             </tr>
         </table>
 
-        <h1 class="text">Lessons of course</h1>
-        <table class="table">
+        <table class="table" th:unless="${course.getLessons.empty}">
+            <h1 class="text">Lessons of course</h1>
             <thead>
             <tr class="table-header">
                 <th sec:authorize="isAuthenticated()"></th>
                 <th sec:authorize="hasAnyAuthority('TRAINER', 'MANAGER')"></th>
-                <th sec:authorize="hasAuthority('MANAGER')"></th>
                 <th>Title</th>
                 <th>Start time</th>
                 <th>Description</th>
@@ -65,12 +62,9 @@
                         <i class="fa-solid fa-eye" title="View"></i>
                     </a>
                     </td>
-                    <td sec:authorize="hasAnyAuthority('TRAINER', 'MANAGER')"><a th:href="'/lessons/updateForm/' + ${el.id}">
+                    <td sec:authorize="hasAnyAuthority('TRAINER', 'MANAGER')"><a
+                            th:href="'/lessons/updateForm/' + ${el.id}">
                         <i class="fa-solid fa-file-pen" title="Edit"></i>
-                    </a>
-                    </td>
-                    <td sec:authorize="hasAuthority('MANAGER')"><a th:href="'/lessons/delete/' + ${el.id}">
-                        <i class="fa-solid fa-trash-can" title="Delete"></i>
                     </a>
                     </td>
                     <td><p th:text="${el.title}"></p></td>
@@ -81,8 +75,8 @@
             </tbody>
         </table>
         <br>
-        <h1 sec:authorize="hasAnyAuthority('TRAINER', 'MANAGER')" class="text">Users of course</h1>
-        <table sec:authorize="hasAnyAuthority('TRAINER', 'MANAGER')" class="table">
+        <table sec:authorize="hasAnyAuthority('TRAINER', 'MANAGER')" class="table" th:unless="${users.empty}">
+            <h1 sec:authorize="hasAnyAuthority('TRAINER', 'MANAGER')" class="text">Users of course</h1>
             <thead>
             <tr class="table-header">
                 <th sec:authorize="hasAuthority('MANAGER')"></th>
