LMS-60: Add uri to correct redirect

--- a/App_Web/src/main/resources/templates/request/update_request.html
+++ b/App_Web/src/main/resources/templates/request/update_request.html
@@ -75,6 +75,7 @@
                     </td>
                 </tr>
             </table>
+            <input type="hidden" name="uri" th:value=@{/requests/__${request.id}__}>
             <input type="submit" name="submit" value="Save" class="button-active"/>
         </form>
     </div>
