LMS-62: Add check to empty request

--- a/App_Web/src/main/resources/templates/request/requests.html
+++ b/App_Web/src/main/resources/templates/request/requests.html
@@ -16,8 +16,8 @@
         <h3><a th:href="@{requests/create}" class="button-active">Create request</a></h3>
     </div>
     <div class="main-area">
+        <table class="table" th:unless="${requests.empty}">
         <div th:insert="~{plugins/pagination::pagination}" th:with="firstVer=${requests}"></div>
-        <table class="table">
             <tr class="table-header">
                 <th></th>
                 <th></th>
