--- a/App_Web/src/main/resources/templates/request/student_requests.html
+++ b/App_Web/src/main/resources/templates/request/student_requests.html
@@ -16,7 +16,8 @@
         <h3><a th:href="@{/courses}" class="button-active">Sign up for a course</a></h3>
     </div>
     <div class="main-area">
-        <table class="table">
+        <table class="table" th:unless="${requests.empty}">
+            <div th:insert="~{plugins/pagination::pagination}" th:with="firstVer=${requests}"></div>
             <tr class="table-header">
                 <th>Courses</th>
                 <th>Status</th>
