--- a/App_Web/src/main/resources/templates/lesson/lesson.html
+++ b/App_Web/src/main/resources/templates/lesson/lesson.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <link href="/../static/css/main.css" rel="stylesheet" type="text/css" th:href="@{/css/main.css}">
-    <link href="/../css/fontawesome/icons.css" rel="stylesheet" th:href="@{/css/fontawesome/main.css}">
+    <link href="/css/main.css" rel="stylesheet">
+    <link href="/css/fontawesome/icons.css" rel="stylesheet">
 </head>
 
 <body>
@@ -12,7 +12,6 @@
     <div class="left-side-area">
         <h1 class="header">Lesson</h1>
         <h1 class="subheader">Information<br> about the lesson</h1>
-
     </div>
 
     <div>
