--- a/App_Web/src/main/resources/templates/index.html
+++ b/App_Web/src/main/resources/templates/index.html
@@ -3,15 +3,15 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title th:text="#{Title_LMS_Main.text}">LMS - Main Page</title>
+    <title th:text="#{Index.TitleLms}">LMS - Main Page</title>
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
 <div th:replace="~{plugins/menu::menu}"></div>
 <div class="main">
     <div class="left-side-area">
-        <h1 class="header" th:text="#{LMS.text}">Learning Management System</h1>
-        <h2 class="subheader" th:text="#{Welcome.text}">Welcome to the Learning Management System. Wish you a happy
+        <h1 class="header" th:text="#{Index.Lms}">Learning Management System</h1>
+        <h2 class="subheader" th:text="#{Index.Welcome}">Welcome to the Learning Management System. Wish you a happy
             journey!</h2>
     </div>
     <div class="main-area">
