LMS-63: Add cut-comment CSS to <td> with comment & delete file link

--- a/App_Web/src/main/resources/static/css/main.css
+++ b/App_Web/src/main/resources/static/css/main.css
@@ -216,3 +216,11 @@ input:disabled {
     overflow-x: hidden;
     background: #fff;
 }
+
+.cut-comment {
+    white-space: nowrap;
+    overflow: hidden;
+    padding: 5px;
+    position: relative;
+    max-width: 300px;
+}
